--- a/_notebooks/iteration_2Darray.ipynb
+++ b/_notebooks/iteration_2Darray.ipynb
@@ -14,13 +14,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -33,85 +28,65 @@
      "text": [
       "\n",
       "Car drivng down in Java Loop\n",
+      "                                                                \n",
       "  ______                                                        \n",
       " /|_||_\\`.__                                                   \n",
       "(   _    _ _\\                                                  \n",
       "=`-(_)--(_)-'                                                   \n",
       "=============================================================== \n",
-      "                  ______                                        \n",
-      "                 /|_||_\\`.__                                   \n",
-      "                (   _    _ _\\                                  \n",
-      "                =`-(_)--(_)-'                                   \n",
+      "                                                                \n",
+      "                 _/\\______\\__                               \n",
+      "                /  -. -|-  ,-.`-.                            \n",
+      "                `( o )----( o )-'                            \n",
+      "                  `-'      `-'                               \n",
       "=============================================================== \n",
-      "                             ______                             \n",
-      "                            /|_||_\\`.__                        \n",
-      "                           (   _    _ _\\                       \n",
-      "                           =`-(_)--(_)-'                        \n",
+      "                          _________________________          \n",
+      "                         |   |     |     |    | |  \\         \n",
+      "                         |___|_____|_____|____|_|___\\        \n",
+      "                         |                    | |    \\       \n",
+      "                         `--(o)(o)--------------(o)--'        \n",
       "=============================================================== \n",
-      "                                                 ______         \n",
-      "                                                /|_||_\\`.__    \n",
-      "                                               (   _    _ _\\   \n",
-      "                                               =`-(_)--(_)-'    \n",
+      "                                                              \n",
+      "                                           _____________      \n",
+      "                                          ||______][__ \\\\____  \n",
+      "                                          |o   _   |-  | _ o) \n",
+      "                                          '---(_)-------(_) ' \n",
       "=============================================================== \n",
+      "                                                                \n",
       "  ______                                                        \n",
       " /|_||_\\`.__                                                   \n",
       "(   _    _ _\\                                                  \n",
       "=`-(_)--(_)-'                                                   \n",
       "=============================================================== \n",
-      "                  ______                                        \n",
-      "                 /|_||_\\`.__                                   \n",
-      "                (   _    _ _\\                                  \n",
-      "                =`-(_)--(_)-'                                   \n",
+      "                                                                \n",
+      "                 _/\\______\\__                               \n",
+      "                /  -. -|-  ,-.`-.                            \n",
+      "                `( o )----( o )-'                            \n",
+      "                  `-'      `-'                               \n",
       "=============================================================== \n",
-      "                             ______                             \n",
-      "                            /|_||_\\`.__                        \n",
-      "                           (   _    _ _\\                       \n",
-      "                           =`-(_)--(_)-'                        \n",
+      "                          _________________________          \n",
+      "                         |   |     |     |    | |  \\         \n",
+      "                         |___|_____|_____|____|_|___\\        \n",
+      "                         |                    | |    \\       \n",
+      "                         `--(o)(o)--------------(o)--'        \n",
       "=============================================================== \n",
-      "                                                 ______         \n",
-      "                                                /|_||_\\`.__    \n",
-      "                                               (   _    _ _\\   \n",
-      "                                               =`-(_)--(_)-'    \n",
-      "=============================================================== \n",
+      "                                                                \n",
       "  ______                                                        \n",
       " /|_||_\\`.__                                                   \n",
       "(   _    _ _\\                                                  \n",
       "=`-(_)--(_)-'                                                   \n",
       "=============================================================== \n",
-      "                  ______                                        \n",
-      "                 /|_||_\\`.__                                   \n",
-      "                (   _    _ _\\                                  \n",
-      "                =`-(_)--(_)-'                                   \n",
+      "                                                                \n",
+      "                 _/\\______\\__                               \n",
+      "                /  -. -|-  ,-.`-.                            \n",
+      "                `( o )----( o )-'                            \n",
+      "                  `-'      `-'                               \n",
       "=============================================================== \n",
-      "                             ______                             \n",
-      "                            /|_||_\\`.__                        \n",
-      "                           (   _    _ _\\                       \n",
-      "                           =`-(_)--(_)-'                        \n",
-      "=============================================================== \n",
-      "                                                 ______         \n",
-      "                                                /|_||_\\`.__    \n",
-      "                                               (   _    _ _\\   \n",
-      "                                               =`-(_)--(_)-'    \n",
-      "=============================================================== \n",
+      "                                                                \n",
       "  ______                                                        \n",
       " /|_||_\\`.__                                                   \n",
       "(   _    _ _\\                                                  \n",
       "=`-(_)--(_)-'                                                   \n",
-      "=============================================================== \n",
-      "                  ______                                        \n",
-      "                 /|_||_\\`.__                                   \n",
-      "                (   _    _ _\\                                  \n",
-      "                =`-(_)--(_)-'                                   \n",
-      "=============================================================== \n",
-      "                             ______                             \n",
-      "                            /|_||_\\`.__                        \n",
-      "                           (   _    _ _\\                       \n",
-      "                           =`-(_)--(_)-'                        \n",
-      "=============================================================== \n",
-      "                                                 ______         \n",
-      "                                                /|_||_\\`.__    \n",
-      "                                               (   _    _ _\\   \n",
-      "                                               =`-(_)--(_)-'    \n",
       "=============================================================== \n"
      ]
     }
@@ -123,6 +98,7 @@
     "    public CarLoop() {\n",
     "        car = new String[][]{\n",
     "           {\n",
+    "                \"                                                               \",\n",
     "                \"  ______                                                       \",\n",
     "                \" /|_||_\\\\`.__                                                  \",\n",
     "                \"(   _    _ _\\\\                                                 \",\n",
@@ -130,24 +106,27 @@
     "                \"===============================================================\"\n",
     "           },\n",
     "           {\n",
-    "                \"                  ______                                       \",\n",
-    "                \"                 /|_||_\\\\`.__                                  \",\n",
-    "                \"                (   _    _ _\\\\                                 \",\n",
-    "                \"                =`-(_)--(_)-'                                  \",\n",
+    "                \"                                                               \",\n",
+    "                \"                 _/\\\\______\\\\__                              \",\n",
+    "                \"                /  -. -|-  ,-.`-.                           \",\n",
+    "                \"                `( o )----( o )-'                           \",\n",
+    "                \"                  `-'      `-'                              \",\n",
     "                \"===============================================================\"            \n",
     "           },\n",
     "           {\n",
-    "                \"                             ______                            \",\n",
-    "                \"                            /|_||_\\\\`.__                       \",\n",
-    "                \"                           (   _    _ _\\\\                      \",\n",
-    "                \"                           =`-(_)--(_)-'                       \",\n",
+    "                \"                          _________________________         \",\n",
+    "                \"                         |   |     |     |    | |  \\\\        \",\n",
+    "                \"                         |___|_____|_____|____|_|___\\\\       \",\n",
+    "                \"                         |                    | |    \\\\      \",\n",
+    "                \"                         `--(o)(o)--------------(o)--'       \",\n",
     "                \"===============================================================\"            \n",
     "            },\n",
     "            {\n",
-    "                \"                                                 ______        \",\n",
-    "                \"                                                /|_||_\\\\`.__   \",\n",
-    "                \"                                               (   _    _ _\\\\  \",\n",
-    "                \"                                               =`-(_)--(_)-'   \",\n",
+    "                \"                                                             \",\n",
+    "                \"                                           _____________     \",\n",
+    "                \"                                          ||______][__ \\\\\\\\____ \",\n",
+    "                \"                                          |o   _   |-  | _ o)\",\n",
+    "                \"                                          '---(_)-------(_) '\",\n",
     "                \"===============================================================\"            \n",
     "            },\n",
     "        };\n",
@@ -167,7 +146,7 @@
     "                }\n",
     "            }\n",
     "\n",
-    "            \n",
+    "            carPlace -= 1;\n",
     "        }\n",
     "    }\n",
     "\n",
