--- a/_notebooks/iteration_2Darray.ipynb
+++ b/_notebooks/iteration_2Darray.ipynb
@@ -15,9 +15,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Car drivng down in Java Loop\n",
+      "4 cars left in the race\n",
+      "                                                                \n",
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n",
+      "                                                                \n",
+      "                 _/\\______\\__                               \n",
+      "                /  -. -|-  ,-.`-.                            \n",
+      "                `( o )----( o )-'                            \n",
+      "                  `-'      `-'                               \n",
+      "=============================================================== \n",
+      "                          _________________________          \n",
+      "                         |   |     |     |    | |  \\         \n",
+      "                         |___|_____|_____|____|_|___\\        \n",
+      "                         |                    | |    \\       \n",
+      "                         `--(o)(o)--------------(o)--'        \n",
+      "=============================================================== \n",
+      "                                                              \n",
+      "                                           _____________      \n",
+      "                                          ||______][__ \\\\____  \n",
+      "                                          |o   _   |-  | _ o) \n",
+      "                                          '---(_)-------(_) ' \n",
+      "=============================================================== \n",
+      "3 cars left in the race\n",
+      "                                                                \n",
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n",
+      "                                                                \n",
+      "                 _/\\______\\__                               \n",
+      "                /  -. -|-  ,-.`-.                            \n",
+      "                `( o )----( o )-'                            \n",
+      "                  `-'      `-'                               \n",
+      "=============================================================== \n",
+      "                          _________________________          \n",
+      "                         |   |     |     |    | |  \\         \n",
+      "                         |___|_____|_____|____|_|___\\        \n",
+      "                         |                    | |    \\       \n",
+      "                         `--(o)(o)--------------(o)--'        \n",
+      "=============================================================== \n",
+      "2 cars left in the race\n",
+      "                                                                \n",
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n",
+      "                                                                \n",
+      "                 _/\\______\\__                               \n",
+      "                /  -. -|-  ,-.`-.                            \n",
+      "                `( o )----( o )-'                            \n",
+      "                  `-'      `-'                               \n",
+      "=============================================================== \n",
+      "1 cars left in the race\n",
+      "                                                                \n",
+      "  ______                                                        \n",
+      " /|_||_\\`.__                                                   \n",
+      "(   _    _ _\\                                                  \n",
+      "=`-(_)--(_)-'                                                   \n",
+      "=============================================================== \n"
+     ]
+    }
+   ],
    "source": [
     "class CarLoop {\n",
     "    String [][] car;\n",
@@ -124,7 +201,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
