--- a/_notebooks/fibonacci.ipynb
+++ b/_notebooks/fibonacci.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -196,11 +196,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# While Loop"
    ]
@@ -287,6 +282,98 @@
     "}\n",
     "\n",
     "FiboWhile.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Recursion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Init method = Recursion\n",
+      "fibonacci Number 20 = 4181\n",
+      "fibonacci List = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]\n",
+      "fibonacci Hashmap = {0=[0], 1=[0, 1], 2=[0, 1, 1], 3=[0, 1, 1, 2], 4=[0, 1, 1, 2, 3], 5=[0, 1, 1, 2, 3, 5], 6=[0, 1, 1, 2, 3, 5, 8], 7=[0, 1, 1, 2, 3, 5, 8, 13], 8=[0, 1, 1, 2, 3, 5, 8, 13, 21], 9=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34], 10=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55], 11=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89], 12=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144], 13=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233], 14=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377], 15=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610], 16=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987], 17=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597], 18=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584], 19=[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]}\n",
+      "fibonacci Sequence 1 = [0]\n",
+      "fibonacci Sequence 2 = [0, 1]\n",
+      "fibonacci Sequence 3 = [0, 1, 1]\n",
+      "fibonacci Sequence 4 = [0, 1, 1, 2]\n",
+      "fibonacci Sequence 5 = [0, 1, 1, 2, 3]\n",
+      "fibonacci Sequence 6 = [0, 1, 1, 2, 3, 5]\n",
+      "fibonacci Sequence 7 = [0, 1, 1, 2, 3, 5, 8]\n",
+      "fibonacci Sequence 8 = [0, 1, 1, 2, 3, 5, 8, 13]\n",
+      "fibonacci Sequence 9 = [0, 1, 1, 2, 3, 5, 8, 13, 21]\n",
+      "fibonacci Sequence 10 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34]\n",
+      "fibonacci Sequence 11 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55]\n",
+      "fibonacci Sequence 12 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n",
+      "fibonacci Sequence 13 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144]\n",
+      "fibonacci Sequence 14 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233]\n",
+      "fibonacci Sequence 15 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377]\n",
+      "fibonacci Sequence 16 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610]\n",
+      "fibonacci Sequence 17 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987]\n",
+      "fibonacci Sequence 18 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597]\n",
+      "fibonacci Sequence 19 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584]\n",
+      "fibonacci Sequence 20 = [0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.ArrayList;\n",
+    "import java.util.HashMap;\n",
+    "\n",
+    "public class FiboRecursion extends Fibo {\n",
+    "    public FiboRecursion() {\n",
+    "        this(20); // telescope to avoid code duplication, using default as 20\n",
+    "    }\n",
+    "\n",
+    "    public FiboRecursion(int nth) {\n",
+    "        super(nth);\n",
+    "    }\n",
+    "\n",
+    "    @Override\n",
+    "    protected void init() {\n",
+    "        this.name = \"Recursion\";\n",
+    "\n",
+    "        for (int i = 0; i < size; i++) {\n",
+    "            setData(fiboRecursion(i));\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    private long fiboRecursion(long n) {\n",
+    "\n",
+    "        if (n <= 1) {\n",
+    "            return n;\n",
+    "        }\n",
+    "\n",
+    "        return (fiboRecursion(n - 1) + fiboRecursion(n - 2));\n",
+    "    }\n",
+    "\n",
+    "    /*\n",
+    "     * Tester class method. If this becomes abstract you will not be able to test it\n",
+    "     * directly ...\n",
+    "     * Change this method to call \"main\" class of each of the extended classes\n",
+    "     */\n",
+    "    static public void main(String[] args) {\n",
+    "        FiboRecursion fib = new FiboRecursion();\n",
+    "        fib.print();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "FiboRecursion.main(null);"
    ]
   }
  ],
