--- a/_notebooks/2022-10-26-arrays_frq.ipynb
+++ b/_notebooks/2022-10-26-arrays_frq.ipynb
@@ -4,17 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FRQ 3a Arrays"
+    "# FRQ 3a Arrays\n",
+    "\n",
+    "- toc: true \n",
+    "- badges: true\n",
+    "- comments: true\n",
+    "- categories: [jupyter]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public void addMembers(String[] names, int gradYear) {\n",
@@ -36,7 +37,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
